--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,8 @@
                           <a class="dropdown-item" href="{% url 'disciplines:disciplines_list' %}">Список дисциплин</a>
                           <div class="dropdown-divider"></div>
                           <a class="dropdown-item" href="{% url 'disciplines:excel' %}">Экран успеваемости</a>
-                          <a class="dropdown-item" href="{% url 'nomenclatures:rup_list' %}">Рабочий учебный план</a>
+                          <a class="dropdown-item" href="{% url 'nomenclatures:upload_file' %}">Рабочий учебный план</a>
+                          <a class="dropdown-item" href="{% url 'nomenclatures:select_semestr' %}">Номенклатура предметов</a>
                         </div>
                     </li>
                 </ul>
