--- a/templates/select_semestr.html
+++ b/templates/select_semestr.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <form action="{% url 'nomenclatures:set_teachers' %}" method="get">
-    <h1 class="title">Создания номенклатуры предметов</h1>
+    <h1 class="title">Создание номенклатуры предметов</h1>
     <div class="row">
         <div class="col-md-4 offset-md-4">
             <br>
@@ -16,7 +16,7 @@
             </select>
             </div>
             <div class="form-group">
-            <label for="specialization">Направления подготовки:</label>
+            <label for="specialization">Направление подготовки:</label>
             <select name="specialization" id="specialization" class="form-control">
                 {% for specialization in specializations %}
                     <option value="{{ specialization.id }}">{{ specialization.name}}</option>
