--- a/templates/students_list.html
+++ b/templates/students_list.html
@@ -30,12 +30,10 @@
         </tbody>
     </table>
     <br>
-    <a href="{% url 'student_add' %}" class="btn btn-success">Добавить нового студента</a>
-
     <form method="post">
         {% csrf_token %}
-        <p><button type="submit" class="btn btn-success" name="synch" value="synch">Синхронизация</button></p>
-
+        <p><button type="submit" class="btn btn-success" name="synch" value="synch">Синхронизация</button>
+        <a href="{% url 'student_add' %}" class="btn btn-success">Добавить нового студента</a></p>
         <p>Дата последней синхронизации: {{ date }}</p>
     </form>
 {% endblock %}
