--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,8 @@
             {% block content %}
             {% endblock %}
         </div>
+            {% block content2 %}
+            {% endblock %}
     </body>
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
