--- a/templates/disc_list.html
+++ b/templates/disc_list.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Список дисциплин</h1>
     <br>
-    <table id="my_table" class="table table-bordered">
+    <table id="my_table2" class="table table-bordered">
         <thead class="thead-light">
             <tr>
                 <th>Дисциплина</th>
