--- a/templates/brs_students.html
+++ b/templates/brs_students.html
@@ -64,6 +64,6 @@
         <br>
         <button type="submit" class="btn btn-success" name="save" value="save">Сохранить</button>
         <button type="submit" class="btn btn-success" name="vedomost" value="vedomost">Скачать ведомость</button>
-        <input type="button" class="btn btn-secondary" onclick="history.back(-2);" value="Назад"/>
+        <input type="button" class="btn btn-secondary" onclick="history.back();" value="Назад"/>
     </form>
 {% endblock %}
