--- a/templates/disciplines.html
+++ b/templates/disciplines.html
@@ -24,7 +24,7 @@
                 <td> {{ discipline.code }} </td>
                 <td> {{ discipline.program }} </td>
                 <td> {{ discipline.lecturer }} </td>
-                <td> <a href="{% url 'brs_studentlist' discipline.id %}"><input type="submit" value="Успеваемость"
+                <td> <a href="{% url 'brs_studentlist' discipline.id %}"><input type="submit" value="Контрольный лист"
                                                                                    class="btn btn-primary"></a></td>
                 <td> <a href="{% url 'disciplines:update' discipline.id %}"><input type="submit" value="Изменить"
                                                                                    class="btn btn-secondary"></a></td>
