--- a/templates/disciplines_detail.html
+++ b/templates/disciplines_detail.html
@@ -35,7 +35,7 @@
                         </tbody>
                     </table>
                     <a href="{% url 'disciplines:details_list' %}" class="btn btn-primary">Изменить</a>
-                    <a href="{% url 'disciplines:disciplines_list' %}" class="btn btn-secondary">Назад</a>
+                    <input type="button" class="btn btn-secondary" onclick="history.back();" value="Назад"/>
                 </div>
             </div>
         </div>
