--- a/templates/disc_list.html
+++ b/templates/disc_list.html
@@ -10,15 +10,18 @@
                 <th>Код</th>
                 <th>Специализация</th>
                 <th>Преподаватель</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
             {% for discipline in discipline_list %}
             <tr>
-                <td> <a href="{% url 'brs_studentlist' discipline.id %}">{{ discipline.Name }}</a> </td>
+                <td> <a href="{% url 'disciplines:detail' discipline.id %}">{{ discipline.Name }}</a> </td>
                 <td> {{ discipline.code }} </td>
                 <td> {{ discipline.program }} </td>
                 <td> {{ discipline.lecturer }} </td>
+                <td><a href="{% url 'brs_studentlist' discipline.id %}"> <input type="submit" value="Контрольный лист"
+                                                                                   class="btn btn-primary"></a></td>
             </tr>
             {% endfor %}
         </tbody>
