Поменял принцип системы регистрации и доступу к разделу мои дисциплины

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                           Преподавателю
                         </a>
                         <div class="dropdown-menu" aria-labelledby="teacher">
-                          <a class="dropdown-item" href="{% url 'disciplines:disc_teachers' %}">Список дисциплин</a>
+                          <a class="dropdown-item" href="{% url 'disciplines:mysubjects' %}">Мои дисциплины</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown active">
