--- a/templates/disc_error.html
+++ b/templates/disc_error.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
-{% block title %}Ошибка{% endblock %}
+{% block title %}Дисциплины не найдены{% endblock %}
 {% block content %}
-    <h1>Ошибка</h1>
+    <h1>Дисциплины не найдены</h1>
         <br>
-        <p align="center">Для дальнейшей работы с системой, обратитесь к сис. администратору веб-приложения</p>
+        <p align="center">Для дальнейшей работы с вашими дисциплинами, обратитесь к сис. администратору веб-приложения</p>
         <p align="center"><a href="{% url 'logout' %}" class="btn btn-success">Выйти</a></p>
 {% endblock %}
