отображение раздела начальнику УМО теперь скрывается при отсутствии прав доступа на этот раздел

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
                           <a class="dropdown-item" href="{% url 'disciplines:mysubjects' %}">Мои дисциплины</a>
                         </div>
                     </li>
+                    {% if perms.umo.add_discipline %}
                     <li class="nav-item dropdown active">
                         <a class="nav-link dropdown-toggle" href="#" id="admin" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Начальнику УМО
@@ -41,6 +42,7 @@
                           <a class="dropdown-item" href="{% url 'nomenclatures:select_semestr' %}">Номенклатура предметов</a>
                         </div>
                     </li>
+                    {% endif %}
                 </ul>
                 <ul class="navbar-nav navbar-right">
                     <li class="nav-item active">
