номенклатура дисциплин с выюором направления и курса

--- a/templates/nomenclature.html
+++ b/templates/nomenclature.html
@@ -5,6 +5,6 @@
     <form action="" method="get">
         {% csrf_token %}
         <br>
-        <p align="center"><a href="{% url 'nomenclatures:set_teachers' %}" class="btn btn-success"> Номенклатура предметов </a></p>
+        <p align="center"><a href="{% url 'nomenclatures:set_teachers' %}" class="btn btn-success"> Номенклатура дисциплин </a></p>
     </form>
 {% endblock %}
