--- a/templates/select_semestr.html
+++ b/templates/select_semestr.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <form action="{% url 'nomenclatures:set_teachers' %}" method="get">
-    <h1 class="title">Создание номенклатуры предметов</h1>
+    <h1 class="title">Создание номенклатуры дисциплин</h1>
     <div class="row">
         <div class="col-md-4 offset-md-4">
             <br>
@@ -31,7 +31,7 @@
                 {% endfor %}
             </select>
             </div>
-            <p align="center"><button type="submit" class="btn btn-success" value="submit">Выбрать преподавателя</button>
+            <p align="center"><button type="submit" class="btn btn-success" value="submit">Выбрать преподавателей</button>
           </div>
     </div>
 </form>
