--- a/templates/select_teacher.html
+++ b/templates/select_teacher.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Номенклатура предметов{% endblock %}
 {% block content %}
-<h1>Номенклатура предметов</h1>
+<h1>Проставление преподавателей в дисциплинах </h1>
 <br>
 <form action="{% url 'nomenclatures:set_teachers_done' %}" method="post">
     {% csrf_token %}
