12/10/2010 modified umo/models.py, some views and templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
         <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
+        {% load extra_tags %}
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
             <span class="navbar-brand mb-0 h1">Меню</span>
@@ -19,6 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 {% if user.is_authenticated %}
                 <ul class="navbar-nav text-uppercase g-font-weight-600 u-main-nav-v8 u-sub-menu-v3 mx-auto">
+                    {% if user|has_group:"teacher" %}
                     <li class="nav-item dropdown active">
                         <a class="nav-link dropdown-toggle" href="#" id="teacher" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Преподавателю
@@ -27,7 +29,8 @@
                           <a class="dropdown-item" href="{% url 'disciplines:mysubjects' %}">Мои дисциплины</a>
                         </div>
                     </li>
-                    {% if perms.umo.add_discipline %}
+                    {% endif %}
+                    {% if user|has_group:"office" or user|has_group:"zavkaf" %}
                     <li class="nav-item dropdown active">
                         <a class="nav-link dropdown-toggle" href="#" id="admin" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Начальнику УМО
@@ -36,12 +39,11 @@
                           <a class="dropdown-item" href="{% url 'teachers:list_teachers' %}">Список преподавателей</a>
                           <a class="dropdown-item" href="{% url 'student_changelist' %}">Список студентов</a>
                           <a class="dropdown-item" href="{% url 'disciplines:disciplines_list' %}">Список дисциплин</a>
-                          <div class="dropdown-divider"></div>
                           <a class="dropdown-item" href="{% url 'disciplines:excel' %}">Экран успеваемости</a>
-                          <a class="dropdown-item" href="{% url 'nomenclatures:upload_file' %}">Загрузка файла</a>
+                          <div class="dropdown-divider"></div>
                           <a class="dropdown-item" href="{% url 'nomenclatures:select_semestr' %}">Рабочий учебный план</a>
+                          <a class="dropdown-item" href="{% url 'nomenclatures:upload_file' %}">Загрузка файла</a>
                           <a class="dropdown-item" href="{% url 'nomenclatures:nomenclature_disciplines' %}">Номенклатура дисциплин</a>
-
                         </div>
                     </li>
                     {% endif %}
