--- a/templates/base.html
+++ b/templates/base.html
@@ -41,8 +41,7 @@
                           <a class="dropdown-item" href="{% url 'disciplines:disciplines_list' %}">Список дисциплин</a>
                           <a class="dropdown-item" href="{% url 'disciplines:excel' %}">Экран успеваемости</a>
                           <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="{% url 'nomenclatures:select_semestr' %}">Рабочий учебный план</a>
-                          <a class="dropdown-item" href="{% url 'nomenclatures:upload_file' %}">Загрузка файла</a>
+                          <a class="dropdown-item" href="{% url 'nomenclatures:rup' %}">Рабочий учебный план</a>
                           <a class="dropdown-item" href="{% url 'nomenclatures:nomenclature_disciplines' %}">Номенклатура дисциплин</a>
                         </div>
                     </li>
@@ -81,5 +80,5 @@
     <script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
     <script src="{% static 'js/dataTables.bootstrap4.min.js' %}"></script>
     <script src="{% static 'js/tables.js' %}"></script>
-    {% block scripts %}{% endblock %}
+    <script>{% block scripts %}{% endblock %}</script>
 </html>
