backgrid inline edit brs scores

--- a/templates/brs_students.html
+++ b/templates/brs_students.html
@@ -19,7 +19,7 @@
                     <th>№ зачетной книжки</th>
                     <th>1 контр. срез</th>
                     <th>2 контр. срез</th>
-                    <th>Рубежный срез до начала экз. сессии</th>
+                    <th>Рубежный срез</th>
                     <th>Рубежный срез с учетом премиальных баллов и отработок</th>
                     <th>{{ control_type }}</th>
                     <th>Всего баллов</th>
