--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
         <link rel="stylesheet" href="{% static 'css/dataTables.bootstrap4.min.css' %}" type="text/css">
         <link rel="stylesheet" href="{% static 'css/my.css' %}" type="text/css">
+        {% block additional_css %}{% endblock %}
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -49,7 +50,9 @@
                 </ul>
                 <ul class="navbar-nav navbar-right">
                     <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'logout' %}">Выйти</a>
+                        {% if user %}
+                        <span class="navbar-brand mb-0 h1"> здравствуйте, {{ user.username }}! </span><a class="nav-link" href="{% url 'logout' %}">Выйти</a>
+                        {% endif %}
                     </li>
                 </ul>
                 {% else %}
@@ -80,5 +83,6 @@
     <script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
     <script src="{% static 'js/dataTables.bootstrap4.min.js' %}"></script>
     <script src="{% static 'js/tables.js' %}"></script>
+    {% block additional_js %}{% endblock %}
     <script>{% block scripts %}{% endblock %}</script>
 </html>
