Added group Name in courses list

--- a/templates/disc_list.html
+++ b/templates/disc_list.html
@@ -9,6 +9,7 @@
                 <th>Код</th>
                 <th>Дисциплина</th>
                 <th>Семестр</th>
+                <th>Группа</th>
                 <th>Специализация</th>
                 <th></th>
             </tr>
@@ -19,6 +20,7 @@
                 <td> {{ discipline.discipline_detail.discipline.code }} </td>
                 <td> <a href="{% url 'disciplines:detail' discipline.id %}">{{ discipline.discipline_detail.discipline.Name }}</a> </td>
                 <td> {{ discipline.discipline_detail.semestr }} </td>
+                <td> {{ discipline.group.Name }} </td>
                 <td> {{ discipline.discipline_detail.discipline.program }} </td>
                 <td><a href="{% url 'disciplines:brs_scores' discipline.id %}"> <input type="submit" value="Баллы БРС"
                                                                                    class="btn btn-primary"></a></td>
