added CourseMaxPoints, and form for setting them

--- a/templates/disc_list.html
+++ b/templates/disc_list.html
@@ -10,7 +10,7 @@
                 <th>Дисциплина</th>
                 <th>Семестр</th>
                 <th>Группа</th>
-                <th>Специализация</th>
+                <th>Преподаватель</th>
                 <th></th>
             </tr>
         </thead>
@@ -21,7 +21,7 @@
                 <td> <a href="{% url 'disciplines:detail' discipline.id %}">{{ discipline.discipline_detail.discipline.Name }}</a> </td>
                 <td> {{ discipline.discipline_detail.semestr }} </td>
                 <td> {{ discipline.group.Name }} </td>
-                <td> {{ discipline.discipline_detail.discipline.program }} </td>
+                <td> {{ discipline.lecturer.FIO }} </td>
                 <td><a href="{% url 'disciplines:brs_scores' discipline.id %}"> <input type="submit" value="Баллы БРС"
                                                                                    class="btn btn-primary"></a></td>
             </tr>
